--- a/src/lab/4-6-2.ipynb
+++ b/src/lab/4-6-2.ipynb
@@ -2,23 +2,41 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 5,
    "outputs": [
     {
      "data": {
-      "text/plain": "<module 'src.preprocess' from '/home/junetheriver/code/aiops/src/preprocess.py'>"
+      "text/plain": "<module 'src.net' from '/home/junetheriver/code/aiops/src/net.py'>"
      },
-     "execution_count": 15,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "import pandas as pd\n",
-    "\n",
-    "from src import *\n",
+    "import src.net as net\n",
+    "import sklearn.metrics\n",
+    "import torch.nn as nn\n",
+    "import numpy as np\n",
+    "import scipy.stats as stats\n",
+    "import matplotlib.pyplot as plt\n",
     "import importlib\n",
-    "importlib.reload(preprocess)"
+    "import src.params as params\n",
+    "import src.main as main\n",
+    "import src.dataloader as dataloader\n",
+    "import torch.nn.functional as F\n",
+    "import pandas as pd\n",
+    "from pandas import DataFrame\n",
+    "from sklearn.preprocessing import StandardScaler\n",
+    "import src.preprocess as preprocess\n",
+    "from copy import copy\n",
+    "import src.feature_extraction as feature_extraction\n",
+    "import sys, os, torch\n",
+    "import re\n",
+    "importlib.reload(dataloader)\n",
+    "importlib.reload(preprocess)\n",
+    "importlib.reload(feature_extraction)\n",
+    "importlib.reload(net)"
    ],
    "metadata": {
     "collapsed": false,
@@ -132,12 +150,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 19,
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "35\n",
+      "216\n",
       "Loaded with 3261 cmdb_kpi tuples\n"
      ]
     }
@@ -155,18 +175,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
-   "outputs": [
-    {
-     "data": {
-      "text/plain": "7560"
-     },
-     "execution_count": 29,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
+   "execution_count": 18,
+   "outputs": [],
+   "source": [
+    "args = params.get_args(\"../config/system_a.yaml\")"
    ],
-   "source": [],
    "metadata": {
     "collapsed": false,
     "pycharm": {
@@ -176,13 +189,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 10,
    "outputs": [
     {
      "data": {
       "text/plain": "MultiIndex([(  'gjjcore8',   'system.net.tcp.retrans_segs'),\n            (  'gjjcore9',        'system.tcp.retrans_pct'),\n            ( 'gjjredis1',                 'redis.cpu.sys'),\n            (  'gjjcore7',             'system.mem.shared'),\n            (    'gjjha3',               'system.run_time'),\n            (    'gjjha1',                 'system.io.w_s'),\n            (   'gjjbps1',                 'system.load.1'),\n            (  'gjjcore7',               'system.run_time'),\n            (  'gjjcore5',         'system.fs.inodes.free'),\n            (  'gjjcore9',        'system.udp.connect.num'),\n            ...\n            ('gjjvincio2',         'system.fs.inodes.free'),\n            (    'gjjha3',               'system.mem.free'),\n            (    'gjjha3',             'system.swap.total'),\n            (  'gjjcore6',           'system.tcp.last_ack'),\n            (  'gjjuaap1',          'system.swap.used_pct'),\n            (  'gjjcore6',          'system.tcp.fin_wait1'),\n            ('gjjvincio2',               'system.mem.used'),\n            ('gjjvincio2',            'system.load.norm.5'),\n            (  'gjjuaap1',          'weblogic.can_connect'),\n            (  'gjjcore9', 'weblogic.jdbc.active_conn_avg')],\n           length=3261)"
      },
-     "execution_count": 34,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
